refactor: DAO 규격 수정, 테스트 리팩터링