@@ -3,17 +3,22 @@ package racingcar.dao;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
-import java.util.List;
+import java.util.Arrays;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.JdbcTest;
 import org.springframework.jdbc.core.JdbcTemplate;
-import racingcar.dto.CarDto;
-import racingcar.dto.RacingResultDto;
+import racingcar.domain.Car;
+import racingcar.domain.Coin;
+import racingcar.domain.DeterminedNumberGenerator;
+import racingcar.domain.RacingGame;
 
 @JdbcTest
 class JdbcTemplateRacingDaoTest {
+
+    private static final int STOP = 3;
+    private static final int MOVE = 4;
 
     private final JdbcTemplateRacingDao jdbcTemplateRacingDao;
     private final JdbcTemplate jdbcTemplate;
@@ -27,12 +32,20 @@ class JdbcTemplateRacingDaoTest {
     @Test
     @DisplayName("게임 결과를 저장한다.")
     void shouldSaveGameResultWhenRequest() {
-
-        RacingResultDto racingResultDto = new RacingResultDto(
-                List.of(new CarDto("브리", 2), new CarDto("브라운", 1)),
-                List.of(new CarDto("브리", 2), new CarDto("브라운", 1), new CarDto("토미", 0))
+        RacingGame racingGame = new RacingGame(
+                Arrays.asList(Car.createBy("브리"), Car.createBy("브라운"), Car.createBy("토미")),
+                DeterminedNumberGenerator.createByNumbers(
+                        //브리 브라운  토미
+                        MOVE, MOVE, STOP,
+                        STOP, MOVE, MOVE,
+                        MOVE, STOP, STOP
+                        // 2     2     1
+                ),
+                new Coin(3)
         );
-        jdbcTemplateRacingDao.saveGameResult(racingResultDto, 3);
+        racingGame.play();
+
+        jdbcTemplateRacingDao.saveGameResult(racingGame, 3);
 
         String actualWinners = jdbcTemplate.queryForObject("SELECT winners FROM GAME_RESULT", String.class);
         int trialCount = jdbcTemplate.queryForObject("SELECT trial_count FROM GAME_RESULT", Integer.class);
@@ -44,20 +57,22 @@ class JdbcTemplateRacingDaoTest {
     @DisplayName("플레이어 별 정보를 저장한다.")
     void shouldSaveEachPlayerResultWhenRequest() {
         // GAME_RESULT 를 저장한다
-        List<CarDto> winnersCarDtos = List.of(
-                new CarDto("브리", 2),
-                new CarDto("브라운", 2)
+        RacingGame racingGame = new RacingGame(
+                Arrays.asList(Car.createBy("브리"), Car.createBy("브라운"), Car.createBy("토미")),
+                DeterminedNumberGenerator.createByNumbers(
+                        //브리 브라운  토미
+                        MOVE, MOVE, STOP,
+                        STOP, MOVE, MOVE,
+                        MOVE, STOP, STOP
+                        // 2     2     1
+                ),
+                new Coin(3)
         );
-        List<CarDto> carDtos = List.of(
-                new CarDto("브리", 2),
-                new CarDto("토미", 1),
-                new CarDto("브라운", 2)
-        );
-        RacingResultDto racingResultDto = new RacingResultDto(winnersCarDtos, carDtos);
-        int gameResultKey = jdbcTemplateRacingDao.saveGameResult(racingResultDto, 3);
+        racingGame.play();
+        int gameResultKey = jdbcTemplateRacingDao.saveGameResult(racingGame, 3);
 
         // 저장한 GAME_RESULT 을 참조하는 PLAYER_RESULT 를 저장한다
-        jdbcTemplateRacingDao.savePlayerResults(carDtos, gameResultKey);
+        jdbcTemplateRacingDao.savePlayerResults(racingGame, gameResultKey);
 
         int positionOfBri = jdbcTemplate.queryForObject("SELECT position FROM PLAYER_RESULT WHERE name = '브리'",
                 Integer.class);
@@ -67,8 +82,8 @@ class JdbcTemplateRacingDaoTest {
                 Integer.class);
         assertAll(() -> {
             assertThat(positionOfBri).isEqualTo(2);
-            assertThat(positionOfTomi).isEqualTo(1);
             assertThat(positionOfBrown).isEqualTo(2);
+            assertThat(positionOfTomi).isEqualTo(1);
         });
     }
 }
